add header section and marquee

--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="Flower Asset/pngwing 5.png" type="image/png">
 </head>
-<body>
+<body class="quicksand-font">
     <header>
-
+        <section class="flower-head display-flex">
+            <div class="lets-con">
+                <h1 class="lets">
+                    Let's make beautiful flowers a part of your life.
+                </h1>
+                <p class="lets-p">
+                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.
+                </p>
+                <button class="lets-btn">
+                    Shop Now
+                </button>
+            </div>
+            <div>
+                <img src="Flower Asset/pngwing 10.png" alt="">
+            </div>
+        </section>
     </header>
+    <marquee behavior="scroll" direction="left" class="marq">
+        Flowers are nature's vibrant, fragrant creations that symbolize beauty, love, and life. 🌸
+    </marquee>
     <main>
 
     </main>
