add responsive style for card

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/responsive.css">
     <link rel="shortcut icon" href="Flower Asset/pngwing 5.png" type="image/png">
 </head>
 <body class="quicksand-font">
@@ -22,7 +23,7 @@
                 </button>
             </div>
             <div>
-                <img src="Flower Asset/pngwing 10.png" alt="">
+                <img class="rose" src="Flower Asset/pngwing 10.png" alt="">
             </div>
         </section>
     </header>
@@ -30,7 +31,32 @@
         Flowers are nature's vibrant, fragrant creations that symbolize beauty, love, and life. 🌸
     </marquee>
     <main>
-
+        <section class="main-con">
+            <h1 class="featu-f">Our Featured Flowers</h1>
+            <div class="test">
+                <p class="lets-p featu-p">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <section class="card-con display-flex">
+                <div class="card">
+                    <div class="card-1 cardi">
+                        <img src="Flower Asset/pngwing 6.png" alt="">
+                    </div>
+                    <p class="pink">Pink Flower Tree</p>
+                </div>
+                <div class="card">
+                    <div class="card-2 cardi">
+                        <img src="Flower Asset/pngwing 5.png" alt="">
+                    </div>
+                    <p class="pink">Pink Flower Tree</p>
+                </div>
+                <div class="card">
+                    <div class="card-3 cardi">
+                        <img src="Flower Asset/pngwing 7.png" alt="">
+                    </div>
+                    <p class="pink">Pink Flower Tree</p>
+                </div>
+            </section>
+        </section>
     </main>
     <footer>
 
